monitoring/monitoring-proxy-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-prometheus-stack-grafana
  namespace: default
spec:
  type: ExternalName
  externalName: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: kube-prometheus-stack-prometheus
  namespace: default
spec:
  type: ExternalName
  externalName: kube-prometheus-stack-prometheus.monitoring.svc.cluster.local
  ports:
    - port: 9090
      targetPort: 9090

---
apiVersion: v1
kind: Service
metadata:
  name: kube-prometheus-stack-alertmanager
  namespace: default
spec:
  type: ExternalName
  externalName: kube-prometheus-stack-alertmanager.monitoring.svc.cluster.local
  ports:
    - port: 9093
      targetPort: 9093

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui-service
  namespace: default
spec:
  type: ExternalName
  externalName: kafka-ui-service.kafka.svc.cluster.local
  ports:
    - port: 8080
      targetPort: 8080
